[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/PlayerProxy.gd" type="Script" id=1]
[ext_resource path="res://assets/Shaders/charm.tres" type="Material" id=2]
[ext_resource path="res://assets/Shaders/ring.tres" type="Material" id=3]
[ext_resource path="res://assets/Shaders/boots.tres" type="Material" id=4]
[ext_resource path="res://assets/Shaders/weapon.tres" type="Material" id=5]
[ext_resource path="res://assets/Shaders/shield.tres" type="Material" id=6]
[ext_resource path="res://assets/Shaders/helm.tres" type="Material" id=7]
[ext_resource path="res://assets/Shaders/player.tres" type="Material" id=8]
[ext_resource path="res://assets/Shaders/hair.tres" type="Material" id=9]
[ext_resource path="res://assets/Shaders/armor.tres" type="Material" id=10]
[ext_resource path="res://assets/Shaders/gauntlets.tres" type="Material" id=11]

[node name="PlayerProxy" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="AnimatedSprite" parent="."]
material = ExtResource( 8 )
playing = true

[node name="Hair1" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 9 )
playing = true

[node name="Hair2" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 9 )
playing = true

[node name="Hair3" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 9 )
playing = true

[node name="Hair4" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 9 )
playing = true

[node name="Shield" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 6 )
playing = true

[node name="Armor" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 10 )
playing = true

[node name="Charm" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 2 )
playing = true

[node name="Helm" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 7 )
playing = true

[node name="Boots" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 4 )
playing = true

[node name="Gauntlets" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 11 )
playing = true

[node name="Ring" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 3 )
playing = true

[node name="Sword" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 5 )
playing = true

[node name="Spear" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 5 )
playing = true

[node name="Axe" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 5 )
playing = true

[node name="Dagger" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 5 )
playing = true

[node name="Club" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 5 )
playing = true
